// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules|layout/cards Brand card 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <div
        class="brand-card"
      >
        <div
          class="brand-card__image-wrapper"
        >
          <picture>
            <!---->
             
            <!---->
             
            <source
              media="(min-width: 768px)"
              srcset=""
            />
             
            <!---->
             
            <!---->
             
            <source
              media="(max-width: 480px)"
              srcset="/generator/svg/400/400"
            />
             
            <img
              alt=""
              class="img--responsive img--lazy"
              src=""
            />
          </picture>
        </div>
         
        <q
          class="brand-card__quote"
        >
          Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
        </q>
      </div>
    </section>
  </section>
</section>
`;

exports[`Storyshots Molecules|layout/cards Card 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <card
        card="[object Object]"
      />
    </section>
  </section>
</section>
`;

exports[`Storyshots Molecules|layout/cards Reseller card 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <reseller-card
        fileinput="/generator/svg/120/120"
        href="https://lipsum.com"
        image="[object Object]"
        labels="[object Object]"
        name="Reseller name"
        showroomcount="2"
      />
    </section>
  </section>
</section>
`;
